i changed css of html page

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <header>    
     <!-- navigation bar-->
         <nav class="navbar">
+            <h1 class="profile"><strong>K N MADHU</strong></h1>
             
            <!-- <i class="fa-solid fa-bars"></i>-->
             <h1><strong>K N MADHU</strong></h1>
